--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -22,39 +22,30 @@
 #icon-container {
     width: 50%;
     min-height: 70px;
-    margin: 40px 0 40px 15%;
+    margin: 10px 0 0 15%;
     display: flex;
     justify-content: left;
     align-items: center;
     flex-direction: row;
     flex-wrap: nowrap;
-    gap: 20%;
+    gap: 5%;
 }
 
 .icon-div {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 20px;
-    p { color: white;
-        font-weight: 700;
-        letter-spacing: 1px;
-        font-size: clamp(16px, 2.5vw, 24px); }
-}
-
-.link1 {
-    text-decoration: none;
-    cursor: pointer;
-    color: white;
+    gap: 10px;
 }
 
 .icon {
-    width: clamp(20px, 7vw, 50px);
-    height: clamp(20px, 7vw, 50px);
+    width: clamp(20px, 3vw, 30px);
+    height: clamp(20px, 3vw, 30px);
 }
 
 #email-div {
     margin-left: 15%;
+    margin-top: 60px;
     p { font-size: clamp(14px, 3vw, 20px); }
 }
 
@@ -66,7 +57,7 @@
 
 
 @media screen and (max-width: 600px) {
-    #sub-heading, #contacts-heading, #email-div {
+    #sub-heading, #contacts-heading, #email-div, #icon-container {
         margin-left: 10%;
     }
 }
