--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Courier New', Courier, monospace;
     line-height: 1.6;
     background-color: #131313;
     overflow-x: hidden;
+    width: 100vw;
 }
 
 #cursor {
