--- a/styles/hero.css
+++ b/styles/hero.css
@@ -8,7 +8,7 @@
 
 #hero {
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     color: #fff;
     display: flex;
     justify-content: left;
