--- a/styles/hero.css
+++ b/styles/hero.css
@@ -17,7 +17,7 @@
 }
 
 #bg-image {
-    background: url(../images/bg4.png);
+    background: url(../images/stars-bg.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -45,7 +45,7 @@
 }
   
 #typewriter{
-    font-size: clamp(14px, 3vw, 30px);
+    font-size: clamp(14px, 2.5vw, 30px);
     margin: 0;
     margin-top: -100px;
     font-family: "Courier New";
