--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ html {
 body {
     font-family: 'Courier New', Courier, monospace;
     line-height: 1.6;
-    background-color: #131313;
+    background-color: black;
     overflow-x: hidden;
     width: 100vw;
 }
@@ -25,4 +25,15 @@ body {
     pointer-events: none;
     z-index: 1000;
     display: none;
+}
+
+
+.floating {
+    animation: floating 4s ease-in-out infinite;
+}
+
+@keyframes floating {
+    0%{ transform: translateY(0); }
+    50%{ transform: translateY(-15px); }
+    100%{ transform: translateY(0px); }
 }
