--- a/styles/work.css
+++ b/styles/work.css
@@ -75,8 +75,10 @@
 .about-item {
     margin: 0 20px;
     color: rgb(211, 123, 76);
+    h1 { font-size: clamp(28px, 4vw, 40px); }
     p { margin-bottom: 10px;
-        text-align: left; }
+        text-align: left;
+        font-size: clamp(14px, 2vw, 20px); }
 }
 
 #display-1 {
