--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,9 @@ body {
     display: none;
 }
 
+#cursor-div {
+    opacity: 0;
+}
 
 .floating {
     animation: floating 4s ease-in-out infinite;
@@ -36,4 +39,24 @@ body {
     0%{ transform: translateY(0); }
     50%{ transform: translateY(-15px); }
     100%{ transform: translateY(0px); }
+}
+
+#loading-screen {
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+#loading-icon {
+    background-color: white;
+    height: 10vh;
+    width: 10vh;
+    z-index: 3;
 }
