--- a/styles/style.css
+++ b/styles/style.css
@@ -47,9 +47,6 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: black;
 }
 
@@ -61,4 +58,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
