--- a/styles/work.css
+++ b/styles/work.css
@@ -89,6 +89,11 @@
     background-image: url(../images/rullitis.png);
 }
 
+#display-3 {
+    background-image: url(../images/candles.png);
+}
+
+
 .site-link {
     text-decoration: none;
     color: white;
@@ -111,7 +116,7 @@
         align-items: center;
         margin-bottom: 80px;
     }
-    #display-1, #display-2 {
+    #display-1, #display-2, #display-3 {
         top: 11px;
         left: 50%;
         transform: translate(-49%, 0);
