--- a/styles/hero.css
+++ b/styles/hero.css
@@ -19,7 +19,8 @@
 }
 
 #bg-image {
-    background: url(../images/stars-bg.png);
+    background: url(../images/hero1.png);
+    /* background: url(../images/stars-bg.png); */
     /* background: url(../images/bg4.png); */
     background-repeat: no-repeat;
     background-position: center;
@@ -33,7 +34,7 @@
     top: 0;
     left: 0;
 
-    opacity: 0.8;
+    opacity: 90%;
 }
 
 #typewriter-div {
