--- a/styles/work.css
+++ b/styles/work.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin: auto;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 100;
 }
 
 #work-top {
@@ -21,7 +23,7 @@
     margin: 10px auto 30px auto;
     color: rgb(191, 111, 61);
     font-weight: 100;
-    font-size: 20px;
+    font-size: 18px;
     text-align: left;
 }
 
@@ -32,6 +34,7 @@
     font-size: 20px;
     text-align: left;
     padding: 20px;
+    font-family: "Zen Dots", sans-serif;
 }
 
 
@@ -75,7 +78,9 @@
 .about-item {
     margin: 0 20px;
     color: rgb(211, 123, 76);
-    h1 { font-size: clamp(28px, 4vw, 40px); }
+    h1 { font-size: clamp(28px, 4vw, 40px);
+         font-family: "Zen Dots", sans-serif;
+    }
     p { margin-bottom: 10px;
         text-align: left;
         font-size: clamp(14px, 2vw, 20px); }
