--- a/styles/header.css
+++ b/styles/header.css
@@ -1,18 +1,36 @@
 header {
     color: #fff;
-    height: 80px;
+    height: 70px;
+    width: 93vw;
     z-index: 1;
     position: absolute;
-    top: 1%;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+#name {
+    font-family: "Bodoni Moda", serif;
+    font-size: 16px;
+    display: flex;
+    flex-direction: row;
+    gap: 5%;
+    height: 100%;
+    width: 60%;
+    align-items: center;
 }
 
 header nav {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin: auto;
+    width: 40%;
+    height: 100%;
+    align-items: center;
+    justify-content: right;
+    margin-right: 10px;
 }
 
 header ul {
@@ -23,7 +41,7 @@ header ul {
 }
 
 header ul li {
-    padding: 0 15px;
+    padding: 0 3px;
 }
 
 header ul li button {
@@ -32,6 +50,25 @@ header ul li button {
     background: transparent;
     border: none;
     cursor: pointer;
-    font-size: clamp(14px, 1.5vw, 20px);
-    font-family: 'Courier New', Courier, monospace;
+    font-size: 16px;
+    font-family: "Bodoni Moda", serif;
+    font-weight: 100;
+    letter-spacing: 1px;
+}
+
+
+@media screen and (max-width: 650px) {
+    #name {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        line-height: 20px;
+    }
+    header {
+        height: 90px;
+        padding-left: 10px;
+    }
+    header nav {
+        padding-top: 30px;
+    }
 }
