--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Zen Dots", sans-serif;
     line-height: 1.6;
     background-color: black;
     position: relative;
