--- a/styles/work.css
+++ b/styles/work.css
@@ -7,6 +7,7 @@
     margin: auto;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 100;
+    margin-top: 100px;
 }
 
 #work-top {
