--- a/styles/hero.css
+++ b/styles/hero.css
@@ -140,5 +140,21 @@
     }
 }
 
-
+@media screen and (max-width: 500px) {
+    #designer {
+        font-size: 60px;
+        margin-top: -50px;
+        p {
+            padding-top: 55px;
+            padding-left: 15px;
+        }
+    }
+    #developer {
+        font-size: 60px;
+        margin-top: -100px;
+    }
+    #time {
+        margin-left: 40vw;
+    }
+}
 
