--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ html, body {
 body {
     font-family: "Zen Dots", sans-serif;
     line-height: 1.6;
-    background-color: black;
+    background-color: #131313;
     position: relative;
 }
 
