--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,7 +1,8 @@
 
 
 #bg-image {
-    background: url(../images/hero1.png);
+    /* background: url(../images/hero1.png); */
+    background: url(../images/heaven.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -14,7 +15,7 @@
     top: 0;
     left: 0;
 
-    opacity: 90%;
+    opacity: 60%;
 }
 
 #hero {
@@ -156,17 +157,15 @@
     #time {
         margin-left: 40vw;
     }
-}
-
-@media screen and (max-width: 400px) {
     #hero-about {
         width: 70vw;
         margin-top: -100px;
+        font-size: 16px;
     }
 }
 
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 800px) {
     #designer {
         font-size: 90px;
         margin-top: -70px;
