--- a/styles/work.css
+++ b/styles/work.css
@@ -17,12 +17,13 @@
     display: flex;
     flex-direction: column;
     gap: 10%;
+    color: #f5eee6;
 }
 
 #work-text {
     width: 90%;
     margin: 10px auto 30px auto;
-    color: rgb(191, 111, 61);
+    color: #f5eee6;
     font-weight: 100;
     font-size: 18px;
     text-align: left;
@@ -79,12 +80,17 @@
 .about-item {
     margin: 0 20px;
     color: rgb(211, 123, 76);
-    h1 { font-size: clamp(28px, 4vw, 40px);
-         font-family: "Zen Dots", sans-serif;
+    h1 {
+        font-size: clamp(28px, 4vw, 40px);
+        font-family: "Zen Dots", sans-serif;
+        color: #f5eee6;
     }
-    p { margin-bottom: 10px;
+    p {
+        margin-bottom: 10px;
         text-align: left;
-        font-size: clamp(14px, 2vw, 20px); }
+        font-size: clamp(14px, 2vw, 20px);
+        color: white;
+    }
 }
 
 #display-1 {
@@ -103,7 +109,7 @@
 .site-link {
     text-decoration: none;
     color: white;
-    background-color: rgb(87, 49, 28);
+    background-color: #353535;
     padding: 5px;
     transition: padding 0.5s;
 }
