--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,8 +1,7 @@
 
 
 #bg-image {
-    /* background: url(../images/hero1.png); */
-    background: url(../images/heaven.jpg);
+    background: url(../images/heaven.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -200,5 +199,10 @@
         line-height: 22px;
         font-size: 20px;
         font-family: "Bodoni Moda", serif;
+    }
+}
+@media screen and (min-width: 1250px) {
+    #bg-image {
+        background-position: center -800px;
     }
 }
