--- a/styles/header.css
+++ b/styles/header.css
@@ -3,13 +3,23 @@ header {
     height: 70px;
     width: 93vw;
     z-index: 1;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     align-items: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+#header-blur {
+    height: 70px;
+    width: 100vw;
+    z-index: 0;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #name {
@@ -65,10 +75,12 @@ header ul li button {
         line-height: 20px;
     }
     header {
-        height: 90px;
-        padding-left: 10px;
+        padding: 0 4%;
     }
-    header nav {
-        padding-top: 30px;
+}
+
+@media screen and (max-width: 500px) {
+    #header-prof {
+        display: none;
     }
 }
