--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,9 +1,9 @@
 
 
 #bg-image {
-    background: url(../images/heaven.webp);
+    background: url(../images/heaven-small.webp);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center bottom;
     background-size: cover;
     z-index: -1;
 
@@ -201,8 +201,12 @@
         font-family: "Bodoni Moda", serif;
     }
 }
+
 @media screen and (min-width: 1250px) {
     #bg-image {
-        background-position: center -800px;
+        background: url(../images/heaven-big.webp);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
     }
 }
