--- a/styles/hero.css
+++ b/styles/hero.css
@@ -204,7 +204,7 @@
 
 @media screen and (min-width: 1250px) {
     #bg-image {
-        background: url(../images/heaven-big.webp);
+        background: url(../images/heaven3.webp);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
