--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@ header {
     color: #fff;
     height: 70px;
     width: 93vw;
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     top: 0;
     left: 50%;
@@ -15,11 +15,10 @@ header {
 #header-blur {
     height: 70px;
     width: 100vw;
-    z-index: 0;
+    z-index: 1;
     position: fixed;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
 }
 
 #name {
