--- a/styles/work.css
+++ b/styles/work.css
@@ -18,6 +18,8 @@
     flex-direction: column;
     gap: 10%;
     color: #f5eee6;
+
+    margin-bottom: 100px;
 }
 
 #work-text {
@@ -37,8 +39,8 @@
     text-align: left;
     padding: 20px;
     font-family: "Zen Dots", sans-serif;
+    text-transform: uppercase;
 }
-
 
 
 
@@ -81,9 +83,10 @@
     margin: 0 20px;
     color: rgb(211, 123, 76);
     h1 {
-        font-size: clamp(28px, 4vw, 40px);
+        font-size: clamp(22px, 2.7vw, 40px);
         font-family: "Zen Dots", sans-serif;
         color: #f5eee6;
+        text-transform: uppercase;
     }
     p {
         margin-bottom: 10px;
@@ -92,8 +95,6 @@
         color: white;
     }
 }
-
-
 #display-1 {
     background-image: url(../images/viedii.png);
 }
