--- a/styles/header.css
+++ b/styles/header.css
@@ -33,7 +33,7 @@ header {
 }
 
 #header-prof {
-    font-family: "Bodoni Moda", serif;
+    font-family: Roboto, sans-serif;
     text-transform: uppercase;
 }
 
