--- a/styles/work.css
+++ b/styles/work.css
@@ -1,157 +1,232 @@
-#work {
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+
+
+
+.work {
+    width: 95vw;
+    max-width: 900px;
+    min-height: 90vh;
     margin: auto;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 100;
-    margin-top: 100px;
+    padding-right: 12px;
 }
 
-#work-top {
+.work-item {
     width: 100%;
-    max-width: 1100px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 10%;
-    color: #f5eee6;
-    margin-bottom: 100px;
-}
-
-#work-text {
-    width: 90%;
-    margin: 10px auto 30px auto;
-    color: #f5eee6;
-    font-weight: 100;
-    font-size: 18px;
-    text-align: left;
-    font-family: Roboto, sans-serif;
-    text-transform: uppercase;
-}
-
-.section-header {
-    color: rgba(255, 255, 255, 0.8);
-    font-weight: 100;
-    font-size: 20px;
-    text-align: left;
-    padding: 20px;
-    font-family: Roboto, sans-serif;
-    text-transform: uppercase;
-}
-
-
-
-#work-bottom {
-    width: 100%;
-    max-width: 1100px;
-    margin: auto;
-    margin-top: 5%;
-    padding-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-}
-
-.laptop {
-    width: 340px;
-    height: 197px;
-    user-select: none;
-}
-
-.item {
+    height: 250px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    position: relative;
-    margin-bottom: 120px;
+    margin-bottom: 20px;
 }
 
-.laptop-display {
+.work-item:nth-child(2), .work-item:nth-child(4) {
+    flex-direction: row-reverse;
+}
+
+
+.work-img-div {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+}
+
+
+
+.work-text-div {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h1 {
+        font-size: 80px;
+        font-weight: 100;
+        font-family: "Six Caps", sans-serif;
+        position: relative;
+        display: inline-block;
+        color: #f5eee6;
+        margin: 0;
+        cursor: pointer;
+    }
+}
+
+.work-text-div h1::after {
+    content: '';
     position: absolute;
-    width: 250px;
-    height: 159px;
-    top: 11px;
-    left: 47px;
-    border-radius: 5px 5px 2px 2px;
+    left: 0;
+    bottom: 10px;
+    width: 0;
+    height: 2px;
+    background: #f5eee6;
+    transition: width 0.5s ease;
+}
+
+.work-text-div h1:hover::after {
+    width: 100%;
+}
+
+
+.ontop-div {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+    
+    h1 {
+        font-size: 80px;
+        font-weight: 100;
+        font-family: "Six Caps", sans-serif;
+        position: relative;
+        display: inline-block;
+        color: #f5eee6;
+        margin: 0;
+    }
+}
+
+.ontop-div h1::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    width: 0;
+    height: 2px;
+    background: #f5eee6;
+    transition: width 0.5s ease;
+}
+
+.ontop-div h1:hover::after {
+    width: 100%;
+}
+
+
+
+.work-img {
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+}
+
+
+
+#work-viedi {
+    background: url(../images/viedi2.webp) no-repeat;
+    background-position: center bottom;
+    background-size: cover;
+}
+#work-candles {
+    background: url(../images/candles2.webp) no-repeat;
+    background-position: center top;
+    background-size: cover;
+}
+#work-karting {
+    background: url(../images/karting2.webp) no-repeat;
     background-position: center;
     background-size: cover;
 }
+#work-website1 {
+    background: url(../images/black.webp) no-repeat;
+    background-position: center;
+    background-size: cover;
+    opacity: 30%;
+}
+#work-website2 {
+    background: url(../images/black.webp) no-repeat;
+    background-position: center;
+    background-size: cover;
+    opacity: 30%;
+}
 
-.about-item {
-    margin: 0 20px;
-    color: rgb(211, 123, 76);
-    h1 {
-        font-size: clamp(32px, 12vw, 70px);
-        font-family: "Six Caps", sans-serif;
-        color: #f5eee6;
-        text-transform: uppercase;
+@media screen and (max-width: 800px) {
+    .work-text-div {
+        display: none;
     }
-    p {
-        margin-bottom: 10px;
-        text-align: left;
-        font-size: clamp(14px, 2vw, 20px);
-        color: white;
-        font-family: Roboto, sans-serif;
-        text-transform: uppercase;
+    .work-img-div {
+        width: 90%;
     }
-}
-#display-1 {
-    background-image: url(../images/viedii.png);
-}
-
-#display-2 {
-    background-image: url(../images/rullitis.png);
-}
-
-#display-3 {
-    background-image: url(../images/candles.png);
-}
-
-
-.site-link {
-    text-decoration: none;
-    color: white;
-    background-color: #353535;
-    padding: 5px;
-    transition: padding 0.5s;
-    font-family: Roboto, sans-serif;
-    text-transform: uppercase;
-    font-size: 14px;
-}
-
-.site-link:hover {
-    padding-left: 10px;
-    transition: padding 0.5s;
-}
-
-
-
-@media screen and (max-width: 750px) {
-    .item {
-        flex-direction: column;
-        text-align: center;
+    .work-item {
+        justify-content: center;
         align-items: center;
-        margin-bottom: 80px;
+        height: 180px;
+        margin-bottom: 5px;
     }
-    #display-1, #display-2, #display-3 {
-        top: 11px;
-        left: 50%;
-        transform: translate(-49%, 0);
+    .work-img {
+        border: none;
     }
-    .about-item {
-        h1 { margin-top: 5px; }
-        p { width: 70%;
-            margin: 10px auto 20px auto; }
+    .ontop-div {
+        display: flex;
     }
 }
 
-@media screen and (max-width: 500px) {
-    .about-item p {
-        line-height: 22px;
+@media screen and (min-width: 1200px) {
+    .work-item {
+        width: 100%;
     }
-    #work-text {
-        line-height: 26px;
+    .work-item:nth-child(1) {
+        transform: translateX(-20%);
+        flex-direction: row-reverse;
+        justify-content: flex-start;
+    }
+    .work-item:nth-child(2) {
+        transform: translateX(-5%);
+        flex-direction: row;
+    }
+    .work-item:nth-child(3) {
+        transform: translateX(25%);
+        flex-direction: row;
+    }
+    .work-item:nth-child(4) {
+        transform: translateX(7%);
+        flex-direction: row-reverse;
+    }
+    .work-item:nth-child(5) {
+        transform: translateX(-23%);
+        flex-direction: row-reverse;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .work-item:nth-child(3) {
+        transform: translateX(46%);
+        flex-direction: row;
+    }
+    .work-item:nth-child(4) {
+        transform: translateX(28%);
+        flex-direction: row-reverse;
+    }
+}
+
+
+.work-item:nth-child(4) {
+    cursor: no-drop;
+    .work-img {
+        cursor: no-drop;
+    }
+    .ontop-div {
+        cursor: no-drop;
+    }
+    .work-text-div {
+        cursor: no-drop;
+    }
+}
+.work-item:nth-child(5) {
+    cursor: no-drop;
+    .work-img {
+        cursor: no-drop;
+    }
+    .ontop-div {
+        cursor: no-drop;
+    }
+    .work-text-div {
+        cursor: no-drop;
     }
 }
