--- a/styles/work.css
+++ b/styles/work.css
@@ -1,6 +1,31 @@
 
 
 
+#selected-cases-div {
+    width: 93vw;
+    max-width: 900px;
+    margin: auto;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 15px;
+    height: 150px;
+
+    img {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+#selected-cases {
+    color: #f5eee6;
+    text-transform: uppercase;
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: clamp(20px, 3vw, 40px);
+}
+
+
 .work {
     width: 95vw;
     max-width: 900px;
@@ -165,9 +190,16 @@
     .ontop-div {
         display: flex;
     }
+    #selected-cases-div {
+        width: 88%;
+    }
 }
 
 @media screen and (min-width: 1200px) {
+    img {
+        width: 50px;
+        height: 50px;
+    }
     .work-item {
         width: 100%;
     }
@@ -191,6 +223,9 @@
     .work-item:nth-child(5) {
         transform: translateX(-23%);
         flex-direction: row-reverse;
+    }
+    #selected-cases-div {
+        transform: translateX(-40px);
     }
 }
 
